--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Barber Booking Tool Logo">
         <h1>Rezerwacja wizyty</h1>
 
         <label for="fryzjer">Wybierz fryzjera:</label>
